kubernetes/yml/ingress-sphinx-kubernetes.intracom-telecom.com/ad-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simavi-test-ad
spec:
  rules:
  - host: sphinx-kubernetes.intracom-telecom.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ad-service
          servicePort: 8088
