kubernetes/yml/ingress-sphinx-kubernetes.intracom-telecom.com/dtm-ui-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dtm-ui
  namespace: simavi  
spec:
  rules:
  - host: sphinx-kubernetes.intracom-telecom.com
    http:
      paths:
      - path: /dtm
        backend:
          serviceName: ui-service 
          servicePort: 3001
