kubernetes/yml/ingress-sphinx-kubernetes.intracom-telecom.com/id-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: id
  namespace: simavi
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sphinx-kubernetes.intracom-telecom.com
    http:
      paths:
      - path: /sphinx/id
        backend:
          serviceName: id-service
          servicePort: 8089
