kubernetes/yml/ingress-sphinx-kubernetes.intracom-telecom.com/interactive-dashboards-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: interactive-dashboards
  namespace: simavi  
spec:
  rules:
  - host: sphinx-kubernetes.intracom-telecom.com
    http:
      paths:
      - path: /interactive-dashboards
        backend:
          serviceName: interactive-dashboards 
          servicePort: 3000
